Revision history for MooseX-Role-Logger

{{$NEXT}}

0.003     2014-07-03 12:38:11-04:00 America/New_York

    [Changed]

    - Drop minimum required perl to 5.006

0.002     2014-01-24 16:50:08-05:00 America/New_York

    [Incompatible Change]

    - The role now provides private method '_logger' rather than
      public method 'logger' (thanks, mst)

0.001     2013-10-03 00:24:33 America/New_York

    - First release
