@@ -1,3 +1,3 @@
-/MooseX-Role-Logger*
+/MooX-Role-Logger*
 /.build
 /.tidyall.d
