@@ -1,9 +1,9 @@
-name    = MooseX-Role-Logger
+name    = MooX-Role-Logger
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
 copyright_year   = 2013
 
 [@DAGOLDEN]
-:version = 0.053
+:version = 0.060
 
